# godot-flatbuffers-project

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  flatbuffers_logo.svg.import  main.tscn  options.cmake  preset.deps.json  preset.toolchains.json  project.godot
Notes/: EditorSettings.md  FeatureCanvas.canvas  FeatureTable.md  GrammarCanvas.canvas  Tracker.md
Notes/.obsidian/: workspace.json
Notes/Diary/: 2025-06.md
bench/: BENCH.md  Bench.tscn  BenchCase.gd  BenchScene.tscn1029043001.tmp  abstract.gd  abstract.gd.uid  bench.fbs  bench.gd  bench.gd.uid  bench_generated.gd  bench_generated.gd.uid  bench_scene.gd  editor_run.gd  editor_run.gd.uid  fb_bench.gd  fb_bench.gd.uid  raw_bench_.gd  raw_bench_.gd.uid  runner.gd  runner_array_size.gd  runner_array_size.gd.uid  runner_default.gd  runner_default.gd.uid  runner_prealloc.gd  runner_prealloc.gd.uid  runner_suite.gd  runner_suite.gd.uid  suite_runner.gd
bench/BenchLib/: benchlib.gd  benchlib.gd.uid  check.gd  check.gd.uid  console_reporter.gd  console_reporter.gd.uid  counter.gd  counter.gd.uid  instlib.gd  instlib.gd.uid  log.gd  log.gd.uid  mutex.gd  mutex.gd.uid  perf_counters.gd  perf_counters.gd.uid  register.gd  register.gd.uid  reglib.gd  reporter.gd  reporter.gd.uid  runner.gd  runner.gd.uid  statelib.gd  statelib.gd.uid  statslib.gd  statslib.gd.uid  string_util.gd  string_util.gd.uid  thread_manager.gd  thread_manager.gd.uid  thread_timer.gd  thread_timer.gd.uid  threadlib.gd  timers.gd.uid
bench/builtin_scripts/: case_builtin.gd  case_gd_custom.gd  case_gd_dict.gd  case_gd_dict.gd.uid  fbc.gd.uid  foo.gd.uid
bench/fb_scripts/: bench_generated.gd  case_fb.gd
bench/raw/: bar.gd  bar.gd.uid  fbc.gd  foo.gd  foobar.gd  foobar.gd.uid
cmake/: findGodotExecutable.cmake  godot-cpp-git-tag.cmake  godot-dump.cmake  naming.cmake
doc_classes/: FlatBuffer.xml  FlatBufferBuilder.xml
lib/: godot-cpp.build_profile.json
project/: CustomMainLoop.gd  CustomMainLoop.gd.uid  README.md  include_generated.gd.uid  main.tscn  project.godot  run_tests.gd  run_tests_cli.gd.uid  test.gd
project/addons/gdflatbuffers/: FlatBuffersHighlighter.gd  (+8 more)
project/bpanel/: bpanel.gd  bpanel.tscn  info_box.gd  info_box.tscn
project/editor_scripts/: bpanel_toggle.gd  enable_bpanel.gd  run_tests.gd  run_tests.gd.uid  scratch.gd.uid  test_uuid.gd  test_uuid.gd.uid
project/tests/: Monster_generated.gd.uid  TestBase.gd  TestBase.gd.uid  test.gd
scripts/: FlatBufferTestBase.gd  FlatBufferTestBase.gd.uid
src/: CMakeLists.txt  entry_point.cpp.in  flatbuffer.cpp  flatbuffer.hpp  gdextension.in  register_types.cpp  register_types.hpp  utils.hpp  uuid.cpp  uuid.hpp
tests/: README.md  TESTING.md  TEST_CASE.md  flatc_opts.tres  test.gd  test.gd.uid  test_flexbuffer.gd.uid
tests/UUID/: test_implementations.gd  test_implementations.gd.uid  test_uuid_constants.gd  test_uuid_constants.gd.uid  test_uuid_container.gd  test_uuid_container.gd.uid  test_uuid_conversion.gd  test_uuid_conversion.gd.uid  test_uuid_creators.gd  test_uuid_hashing.gd  test_uuid_validation.gd
tests/fb_class/: schema.fbs  schema_generated.gd  schema_generated.gd.uid  test_flatbuffer_class.gd  test_flatbuffer_class.gd.uid
tests/fb_includes/: include_generated.gd  other.fbs  other_generated.gd  test_include.gd.uid
tests/fb_monster/: Monster.fbs  Monster_generated.gd  Monster_generated.gd.uid  manual_sanity_check.gd  manual_sanity_check.gd.uid  monster_creating.gd  monster_creating.gd.uid  monster_reading.gd  monster_reading.gd.uid  test_compile.gd  test_compile.gd.uid  test_monster.gd  test_monster.gd.uid
tests/fb_reflection/: Reflection.fbs  Reflection_generated.gd  test_reflection.gd
tests/fb_simple/: simple_generated.gd  test_simple.gd
tests/fb_struct_array_fixed/: fixed_array.fbs  fixed_array_generated.gd  test_fixed_array.gd.uid
tests/fb_struct_struct/: test_schema.fbs  test_schema_generated.gd  test_schema_generated.gd.uid
tests/fb_table_array_scalar/: FBTestScalarArrays_generated.gd  FBTestScalarArrays_generated.gd.uid  test.gd
tests/fb_table_array_string/: FBTestStringArray_generated.gd  FBTestStringArray_generated.gd.uid  test.gd.uid
tests/fb_table_array_struct/: struct_in_table_generated.gd  struct_in_table_generated.gd.uid  test.gd
tests/fb_table_array_table/: FBTestTableArray_generated.gd  test.gd.uid
tests/fb_table_scalar/: scalar_fields_generated.gd  scalar_fields_generated.gd.uid  test_scalar_fields.gd  test_scalar_fields.gd.uid
tests/fb_table_string/: FBTestString_generated.gd  test.gd.uid
tests/fb_table_struct/: test.gd.uid  test_schema_generated.gd  test_schema_generated.gd.uid
tests/fb_table_vector_table/: test_schema_generated.gd  test_schema_generated.gd.uid
tests/fb_verification/: test_empty.gd  test_empty.gd.uid  test_verification.gd  test_verification.gd.uid  verifier.fbs  verifier_generated.gd  verifier_generated.gd.uid  verifier_generated.h  verifier_scratch.gd  verifier_scratch.gd.uid
tests/flatbuffers/: gen_opts.tres  minimum_test_script.gd  scalar_test_script.gd  strategy.gd  test_00_minimum.gd  test_01_grammar.gd  test_01_grammar.gd.uid  test_10_table_fields_array.gd.uid  test_10_table_fields_scalar.gd  test_10_table_fields_string.gd.uid  test_10_table_fields_struct.gd  test_10_table_fields_struct.gd.uid  test_10_table_fields_table.gd  test_10_table_fields_table.gd.uid  test_10_table_fields_union.gd.uid  test_10_table_fields_vector.gd.uid  test_20_attributes.gd  test_array_fixed.gd  test_array_fixed.gd.uid  test_attributes.gd  test_attributes.gd.uid  test_include.gd  test_minimum.gd  test_minimum.gd.uid  test_scalar.gd  test_scalar_fields.gd  test_strategy.gd  test_strategy.gd.uid  test_string.gd  test_struct.gd  test_vector.gd  test_vector_of_structs.gd
tests/gd_arrays/: array_types_generated.gd  array_types_generated.gd.uid
tests/gd_structs/: struct_types.fbs  struct_types_generated.gd  struct_types_generated.gd.uid
tests/gd_transform3d/: test.gd.uid  test_schema_generated.gd  test_schema_generated.gd.uid
tests/godot/: test_transform3d.gd  test_variant.gd  test_variant.gd.uid
(+156 files in other folders)
